[package]
name = "domain_matcher"
version = "0.1.0"
authors = ["DuckVador"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
protobuf = { version = "2.18.0", features = ["with-bytes"] }

[build-dependencies]
protoc-rust = "2.0"
