[package]
name = "domain_matcher"
version = "0.1.0"
authors = ["DuckVador"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
pb = []

[dependencies]
deepsize = "0.2.0"
protobuf = { version = "2.18.0", features = ["with-bytes"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
required-features = ["pb"]

[build-dependencies]
protoc-rust = "2.22.1"
